--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 leetcodeInXcode.xcodeproj/xcuserdata/
 leetcodeInXcode.xcodeproj/project.xcworkspace
-leetcodeInXcode/Solution/
+leetcodeInXcode/Solution/*.*
